# Epitech-R-Type

./: CMakeLists.txt  README.md  RFC.txt  conanfile.txt  tools  windows.bat
Client/: CMakeLists.txt  Client.cpp  Client.hpp  main.cpp
Client/State/: State.hpp
Client/State/SCreate/: SCreate.cpp  SCreate.hpp
Client/State/SGame/: SGame.cpp  SGame.hpp
Client/State/SHome/: SHome.cpp  SHome.hpp
Client/State/SJoin/: SJoin.cpp  SJoin.hpp
Client/Window/: Window.cpp  Window.hpp
GameEngine/: Enum.hpp  GameEngine.cpp  GameEngine.hpp  Library.hpp
GameEngine/Components/: Component.hpp
GameEngine/Components/DamageComponent/: DamageComponent.cpp  DamageComponent.hpp
GameEngine/Components/DeliverComponent/: DeliverComponent.cpp  DeliverComponent.hpp
GameEngine/Components/GraphicsComponent/: GraphicsComponent.cpp  GraphicsComponent.hpp
GameEngine/Components/HealthComponent/: HealthComponent.cpp  HealthComponent.hpp
GameEngine/Components/NicknameComponent/: NicknameComponent.cpp  NicknameComponent.hpp
GameEngine/Components/PositionComponent/: PositionComponent.cpp  PositionComponent.hpp
GameEngine/Components/PowerComponent/: PowerComponent.cpp  PowerComponent.hpp
GameEngine/Components/PowerupComponent/: PowerupComponent.cpp  PowerupComponent.hpp
GameEngine/Components/ScoreComponent/: ScoreComponent.cpp  ScoreComponent.hpp
GameEngine/Entity/: Entity.cpp  Entity.hpp
GameEngine/Manager/: Manager.cpp  Manager.hpp
GameEngine/System/: System.hpp
Server/: CMakeLists.txt  Server.cpp  Server.hpp  main.cpp
Server/Room/: Room.cpp  Room.hpp
(+6 files in other folders)
